# rust-faces

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  cspell.config.yaml
.github/workflows/: CI.yml  python-CI.yml
benches/: blazeface.rs  detectors.rs
python/: Cargo.toml  Justfile  pyproject.toml
python/samples/: camera.py  detect_faces.py
python/src/: lib.rs
python/tests/: test_api.py
src/: blazeface.rs  builder.rs  detection.rs  imaging.rs  lib.rs  model_repository.rs  mtcnn.rs  nms.rs  ort.rs  priorboxes.rs  rect.rs  testing.rs  viz.rs
tests/: should_have_smooth_design.rs  test_code_design.rs
