[package]
name = "rust-faces"
version = "1.0.0"
edition = "2021"
authors = ["Rusty Builder <usty_builder@mail2world.com>"]
description = "A Rust library for face detection"
license = "MIT"
repository = "https://github.com/rustybuilder/rust-faces"
readme = "README.md"

[dependencies]
image = "0.24.6"
ndarray = "0.15.6"
ort = { version = "1.14.8", features = ["load-dynamic"] }
nshare = { version = "0.9.0", features = ["ndarray"] }
imageproc = { version = "0.23.0", optional = true }
reqwest = { version = "0.11.18", features = ["blocking"] }
home = "0.5.5"
thiserror = "1.0.40"
itertools = "0.11.0"
indicatif = "0.17.5"

[features]
default = []
viz = ["dep:imageproc"]

[dev-dependencies]
rstest = "0.17.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[test]]
name = "test_code_design"
path = "tests/test_code_design.rs"

[[bench]]
name = "detectors"
harness = false
