[build-system]
requires = ["maturin>=1.1,<2.0", "numpy"]
build-backend = "maturin"

[project]
name = "py_rust_faces"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = [
    "pylint ~=2.17.4",
    "black ~=23.3.0",
    "pytest ~=7.4.0"
]
test = [
    "pytest-cov ~=3.0.0",
]
